fixed up, compiled

--- a/csaund_resume_3_20_17.tex
+++ b/csaund_resume_3_20_17.tex
@@ -134,7 +134,7 @@ Neural Networks for Machine Learning \\
 \subsection{Languages}
 \location{Over 5000 lines:}
 Javascript \textbullet{} Python \textbullet{} C \\
-C++ \textbullet{} \\
+C++ \\
 \location{Over 500 lines:}
 LISP \textbullet{} \textbullet{} CSS \textbullet{} HTTP \\
 \location{Familiar:}
@@ -159,25 +159,28 @@ git/github \textbullet{} NodeJS/React \textbullet{} SVN \textbullet{} \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
-\runsubsection{Jibo Inc.}
-\descript{| Robot SDK Engineer }
-\location{May 2015 - Dec 2016| Boston, MA}
-\descript{| Character AI Engineer }
-\location{Jan 2017 - Present | Boston, MA}
+\runsubsection{Jibo Inc.} \\
+\descript{Robot SDK Engineer }
+\location{May 2015 - Dec 2016 | Boston, MA}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
 \item Employee 20, first hire of SDK team.
 \item Architected data APIs for dev tools to manage robot sensory input (cameras/mics).
-\item Designed and implemented robotic Emotion System and corresponding impacts on robot behavior.
 \item Won first company culture award for "outstanding cultural contributions."
 \item 20+ public speaking appearances for SDK evangelist, including SXSW and WECode."
+\end{tightemize}
+\descript{Character AI Engineer }
+\location{Jan 2017 - Present | Boston, MA}
+%\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+\item Designed and implemented robotic Emotion System and corresponding impacts on robot behavior.
 \end{tightemize}
 \sectionsep
 
 \runsubsection{Spotify}
 \descript{| Software Engineering Intern }
 \location{May 2014 - Sep 2014 | NY, NY}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
+%\vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
 \item Full stack development of internal desktop application.
 \item Developed new web tools to improve internal testing and data collection.
@@ -187,7 +190,7 @@ git/github \textbullet{} NodeJS/React \textbullet{} SVN \textbullet{} \\
 
 \runsubsection{Tufts University}
 \descript{| Teaching Assistant, Computer Science }
-\location{Jan 2012 ? Jan 2015 | Somerville, MA}
+\location{Jan 2012 - Jan 2015 | Somerville, MA}
 \begin{tightemize}
 \item Data Structures, Machine Architecture, Machine Learning
 \item Taught theory and laboratory skills to students with wide range of abilities.
@@ -202,26 +205,17 @@ git/github \textbullet{} NodeJS/React \textbullet{} SVN \textbullet{} \\
 \section{Leadership and Community Service}
 \runsubsection{Girls Who Code}
 \descript{| Instructor}
-\location{Sept 2015 ? Jan 2016 | Belmont, MA}
+\location{Sept 2015 - Jan 2016 | Belmont, MA}
 Instructed three levels of middle- and high-school aged students from introduction to basic data strcutures. Supplemented given course materials with additional lesson plans to emphasize CS fundamentals.
 \sectionsep
 
 \runsubsection{Women in Computer Science}
 \descript{| President}
-\location{Jan 2013 ? Jan 2015 | Somerville, MA}
+\location{Jan 2013 - Jan 2015 | Somerville, MA}
 \begin{tightemize}
 \item Coordinated logistics of club hackathons, speakers, and outreach.
 \item Led executive board in creating WiCS mission and club constitution.
 \item Gained University recognition and sponsorship and widespread campus presence.
-\end{tightemize}
-\sectionsep
-
-\runsubsection{Girls Computer Club}
-\descript{| Head Instructor}
-\location{July 2013 ? Oct 2013 | Christchurch, NZ}
-\begin{tightemize}
-\item Developed curriculum for middle-school aged girls to promote exploration in Computer Science.
-\item Coordinated product and research demos by university faculty and guests.
 \end{tightemize}
 \sectionsep
 
@@ -231,9 +225,10 @@ Instructed three levels of middle- and high-school aged students from introducti
 
 \section{Other Extracurriculars}
 \begin{tabular}{rll}
-Project Management and Leadership Book Group \textbullet{} Tufts Mountain Club Trip Coordinator  \\
-\textbullet{} WWOOF Worker (Germany) \textbullet{} Girl Scouts Gold Award \textbullet{} \\
-Ultimate Frisbee Captain \textbullet{} Alpha Omicron Pi (VP Academic Development)
+ Girl Scouts Gold Award \textbullet{} Project Management and Leadership Book Group \\
+ \textbullet{} Tufts Mountain Club Trip Coordinator \textbullet{} WWOOF Worker (Germany) \\ 
+ \textbullet{} Ultimate Frisbee Captain \textbullet{} Alpha Omicron Pi (VP Academic Development) \\
+ \textbullet{} 20+ countries visited
 \end{tabular}
 \sectionsep
 
