--- a/resume/csaund_resume_3_20_17.tex
+++ b/resume/csaund_resume_3_20_17.tex
@@ -13,7 +13,7 @@
 %     LAST UPDATED DATE
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\lastupdated October 14, 2017
+\lastupdated September 17, 2018
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -21,7 +21,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \namesection{Carolyn}{Saund}{ \urlstyle{same}\href{http://carolynsaund.me}{carolynsaund.me}\\
-\href{mailto:carolyn.saund@gmail.com}{carolyn.saund@gmail.com} | 650.483.4727
+\href{mailto:carolyn.saund@gmail.com}{carolyn.saund@gmail.com} | +44.759.557.9616
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -92,7 +92,7 @@ C++ \textbullet{} Java  \\
 LISP \textbullet{} CSS \textbullet{} HTTP \textbullet{} R \\
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \subsection{Workflow/Frameworks}
-git/github \textbullet{} NodeJS/React \textbullet{} SVN \textbullet{} \\
+git/github \textbullet{} NodeJS  \textbullet{} React \textbullet{} SVN \textbullet{} \\
  Unix/Linux \textbullet{} Jenkins/TDD \textbullet{} CI releases \\
  Stash \textbullet{} Phabricator/arcanist \textbullet{} Gradle \\
  MongoDB \textbullet{} Electron 
@@ -114,6 +114,15 @@ git/github \textbullet{} NodeJS/React \textbullet{} SVN \textbullet{} \\
 
 \section{Experience}
 \runsubsection{Cogito} \\
+
+\descript{Senior Software Developer }
+\location{August 2017 - Present | Boston MA}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+\item Originally Implemented and manage release pipeline.
+\item Full-stack development of Role-Based User Management (RBUM) APIs.
+\end{tightemize}
+
 \descript{Senior Software Developer }
 \location{August 2017 - Present | Boston MA}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
