--- a/resume/csaund_academic_sept18.tex
+++ b/resume/csaund_academic_sept18.tex
@@ -13,14 +13,14 @@
 %     LAST UPDATED DATE
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\lastupdated September 17, 2018
+% \lastupdated September 17, 2018
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %     TITLE NAME
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\namesection{Carolyn}{Saund}{ \urlstyle{same}\href{http://carolynsaund.me}{carolynsaund.me}\\
+\namesection{Carolyn}{Saund}{ \urlstyle{same}\href{http://carolynsaund.me}{carolynsaund.me} \\
 \href{mailto:carolyn.saund@gmail.com}{carolyn.saund@gmail.com} | +44.759.557.9616
 }
 
@@ -30,7 +30,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.33\textwidth}
+\begin{minipage}[t]{0.30\textwidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
@@ -39,24 +39,24 @@
 \section{Education}
 
 \subsection{Tufts University}
-\descript{BSc in Computer Science, Brain and Cognitive Science}
+\descript{BSc, Computer Science, Brain and Cognitive Science}
 \location{May 2015 | Somerville, MA}
 \sectionsep
 
 \subsection{University of Canterbury}
-\descript{BS in Computer Science}
+\descript{BS, Computer Science}
 \location{June 2013 - Jan 2014 | Christchurch, NZ}
-College of Engineering \\
-\location{ GPA: 4.0 / 4.0 } 
+\sectionsep
+
+\subsection{University of Glasgow}
+\descript{Msc, Research Methods in Psychology}
+\location{Sept 2018 - Sept 2019 (Expected) | Glasgow, UK}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Links}
-Github:// \href{https://github.com/csaund}{\bf csaund} \\
-LinkedIn://  \href{https://www.linkedin.com/in/carolynsaund}{\bf carolynsaund} \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     COURSEWORK
@@ -70,14 +70,11 @@ Stochastic Systems \\
 Linear Algebra \\
 Machine Architecture and Assembly \\
 Advanced Topics in Artificial Intelligence \\
-Programming Languages \\
-Computational Theory \\
 \sectionsep
 
 \subsection{Continuing}
 Advanced Seminar in Cognitive Architectures \\
-Neural Networks for Machine Learning \\
-Ongoing Management Training
+Neural Networks for Machine Learning 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SKILLS
@@ -91,11 +88,10 @@ C++ \textbullet{} Java  \\
 \location{Over 500 lines:}
 LISP \textbullet{} CSS \textbullet{} HTTP \textbullet{} R \\
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
+
 \subsection{Workflow/Frameworks}
-git/github \textbullet{} NodeJS  \textbullet{} React \textbullet{} SVN \textbullet{} \\
- Unix/Linux \textbullet{} Jenkins/TDD \textbullet{} CI releases \\
- Stash \textbullet{} Phabricator/arcanist \textbullet{} Gradle \\
- MongoDB \textbullet{} Electron 
+git/github \textbullet{} NodeJS  \textbullet{} React \textbullet{} SVN \textbullet{}  Unix/Linux \textbullet{} Jenkins/TDD \textbullet{} CI releases \textbullet{}
+ Stash \textbullet{} Phabricator/arcanist \textbullet{} Gradle
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -108,24 +104,43 @@ git/github \textbullet{} NodeJS  \textbullet{} React \textbullet{} SVN \textbull
 \hfill
 \begin{minipage}[t]{0.66\textwidth}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Public Speaking and Awards
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Research}
+\runsubsection{Msc, Research Methods in Psychological Science} \\
+\location{Sept 2018 - Sept 2019 (Expected) | Glasgow, UK}
+\location{Supervisors: Philippe Schyns \& Stacy Marsella}
+\vspace{\topsep} % Hacky fix for vert space
+\begin{tightemize}
+\item Design of bodily gesture system for virtual humans to compare naturalness of accompanying speech patterns and consequential efficacy of communication.
+\item MEG analysis of decision making data for use in determining information integration areas in the adult human brain.
+\end{tightemize}
+\sectionsep
+\runsubsection{Publications}
+\begin{tightemize}
+\item Cu tritani eloquentiam quo, ex his omnium audiam intellegam. Etiam decore menandri vel ea, aeque nominavi nec no, quaestio atomorum tincidunt at has
+\end{tightemize}
+\sectionsep
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Experience}
-\runsubsection{Cogito} \\
+\section{Work Experience}
+\runsubsection{Cogito} 
 
-\descript{Senior Software Developer }
-\location{August 2017 - Present | Boston MA}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\descript{Platform Team Lead}
+\location{Jan 2018 - August 2018 | Boston MA}
 \begin{tightemize}
-\item Originally Implemented and manage release pipeline.
-\item Full-stack development of Role-Based User Management (RBUM) APIs.
+\item Managed Agile team of 10 engineers 
+\item Oversaw top-to-bottom implementation of three major user-facing features
 \end{tightemize}
 
-\descript{Senior Software Developer }
-\location{August 2017 - Present | Boston MA}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\descript{Senior Software Engineer }
+\location{August 2017 - Jan 2018 | Boston MA}
 \begin{tightemize}
 \item Originally Implemented and manage release pipeline.
 \item Full-stack development of Role-Based User Management (RBUM) APIs.
@@ -136,10 +151,8 @@ git/github \textbullet{} NodeJS  \textbullet{} React \textbullet{} SVN \textbull
 \descript{Robot SDK Engineer }
 \location{May 2015 - Dec 2016 | Boston, MA}
 \begin{tightemize}
-\item Employee 20(/110) Designed a series of tutorials from "Getting Started" to advanced usage still used to onboard internal and external developers.
 \item Architected data APIs for dev tools to manage robot sensory input from cameras and microphones.
 \item Implemented frontend UI and developer interfaces to build high-level skills.
-\item Won first company culture award for "outstanding cultural contributions."
 \end{tightemize}
 \descript{Character AI Engineer }
 \location{Jan 2017 - August 2017 | Boston, MA}
@@ -149,11 +162,7 @@ git/github \textbullet{} NodeJS  \textbullet{} React \textbullet{} SVN \textbull
 \item Single-handedly architected and maintained robot listening pipeline (main interface for interaction).
 \end{tightemize}
 \descript{ Software Consultant }
-\location{August 2017 - Present | Boston, MA}
-%\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}
-\item Continuing work to rearchitect APIs in cloud-based architecture
-\end{tightemize}
+\location{August 2017 - December 2017 | Boston, MA}
 \sectionsep
 
 \runsubsection{Spotify} \\
@@ -166,35 +175,44 @@ git/github \textbullet{} NodeJS  \textbullet{} React \textbullet{} SVN \textbull
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Tufts University}\\
-\descript{Teaching Assistant, Computer Science }
-\location{Jan 2012 - Jan 2015 | Somerville, MA}
-\begin{tightemize}
-\item Data Structures, Machine Architecture, Machine Learning
-\item Taught theory and laboratory skills to students with wide range of abilities.
-\end{tightemize}
-\sectionsep
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Public Speaking and Awards
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Projects}
-\runsubsection{Drosophila}
-\begin{tightemize}
-\item Designed and programmed arduino "badge" with  genetic algorithms for LED display to recombine when near another badge.
-\end{tightemize}
-\sectionsep
-\runsubsection{The Neuron}
-\begin{tightemize}
-\item Programmed LED strips around metal sculpture to respond based on microphone input, compute audio intensity threshold, and "fire" another LED strip with enough sound intensity.
-\end{tightemize}
-\sectionsep
-
 \end{minipage}
 
 \pagebreak
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Other Extracurriculars and Awards
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Awards \& Appearances}
+\runsubsection{Awards}
+\descript{ }
+\begin{tightemize}
+\item Culture Award (First Recipient) | Jibo Inc. Award for outstanding cultural contributions to the company.
+\item Girl Scout Gold Award | Highest Honor of Girl Scouts of America
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Public Speaking Appearances}
+\descript {}
+\begin{tightemize}
+\item SXSW, Robot Petting Zoo (presentation \& booth)
+\item Women Engineers who Code Conference, (technical workshop \& imposter syndrome seminar)
+\item Lesbians Who Tech, presentation on emotional future of robotics 
+\item Boston ML Meetup, presenter on Innovations in Human-Computer Interfaces
+\item MLHack Championships, (technical presentation \& hackathon judge)
+\item Tufts WICS Conference, Alumni Pannel 
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Memberships \& Activities}
+\descript{ }
+\begin{tightemize}
+\item Cognitive Science Society
+\item Project Management and Leadership Book Group 
+\item AI and Technological Futurism Book Group (Organizer)
+\item Div II Ultimate Frisbee (Captain)
+\end{tightemize}
+\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Community Service
@@ -228,52 +246,5 @@ Instructed three levels of middle- and high-school aged students from introducti
 \end{tightemize}
 \sectionsep
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Other Extracurriculars and Awards
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Extracurriculars}
-\runsubsection{Awards}
-\descript{ }
-\begin{tightemize}
-\item Culture Award (First Recipient) | Jibo Inc. Award for outstanding cultural contributions to the company.
-\item Girl Scout Gold Award | Highest Honor of Girl Scouts of America
-\end{tightemize}
-\sectionsep
-
-\runsubsection{Public Speaking Appearances}
-\descript {}
-\begin{tightemize}
-\item SXSW, Robot Petting Zoo (presentation \& booth)
-\item Women Engineers who Code Conference, (technical workshop \& imposter syndrome seminar)
-\item Lesbians Who Tech, presentation on emotional future of robotics 
-\item Boston ML Meetup, presenter on Innovations in Human-Computer Interfaces
-\item MLHack Championships, (technical presentation \& hackathon judge)
-\item Tufts WICS Conference, Alumni Pannel 
-\end{tightemize}
-\sectionsep
-
-\runsubsection{Memberships \& Activities}
-\descript{ }
-\location{Current}
-\begin{tightemize}
-\item Cognitive Science Society
-\item Project Management and Leadership Book Group 
-\item AI and Technological Futurism Book Group (Organizer)
-\item Div II Ultimate Frisbee (Captain)
-\end{tightemize}
-\location{Former (Undergraduate)}
-\begin{tightemize}
-\item Vice President of Academic Development, Alpha Omicron Pi
-\item Tufts Mountain Club, Trip Coordinator
-\item Midnight Judges Jazz Combo
-\end{tightemize}
-\location{Misc.}
-\begin{tightemize}
-\item 20+ countries visited
-\item WWOOF Worker (Germany)
-\item Avid century bike-rider and marathoner
-\end{tightemize}
-\sectionsep
 
 \end{document}  \documentclass[]{article}
